infrastructure/portainer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: portainer
    spec:
      nodeSelector:
        kubernetes.io/hostname: ru-worker-0.kalkutin.dev
      serviceAccountName: portainer-sa
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: portainer
          image: portainer/portainer-ce:2.33.2
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: portainer-data
              mountPath: /data
      volumes:
        - name: portainer-data
          persistentVolumeClaim:
            claimName: portainer-pvc
