infrastructure/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
  namespace: infrastructure
spec:
  type: ClusterIP
  selector:
    app: portainer
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
